# mistabra2

./: .env.example  .gitignore  README.md  capability_real.txt  check_atomize.py  check_llm.py  check_scoring.py  check_versions.py  demo.py  log.txt  miss_01.txt  miss_ctrl_01.txt  pyproject.toml  sweep.txt  sweep_clusters.py
counterpoint/: __init__.py  app.py  atomize.py  config.py  conjunction.py  embeddings.py  eval.py  fixtures.py  ingest.py  llm.py  models.py  pipeline.py  residual.py  scoring.py  store.py  validation.py
data/: burnt_bread_ach_classic.yaml  cyber_threat_intelligence.yaml  election_info_ops.yaml  financial_insider_trading.yaml  ma_due_diligence.yaml  pharma_safety_signal.yaml  phase1_cases.yaml  supply_chain_disruption.yaml
tests/acceptance/: capability_eval.py  eval_metrics.py  http_client.py  journeys.py  machinery.py  run.py
tests/unit/: conftest.py  test_json_extraction.py  test_lift_scoring.py  test_malformed_llm_output.py  test_semantic_chunking.py
